[package]
name = "parking_lot_rt-benchmark"
version = "0.0.0"
authors = ["Amanieu d'Antras <amanieu@gmail.com>"]
edition = "2021"

[dependencies]
parking_lot_rt = {path = ".."}
seqlock = "0.2"
libc = "0.2"

[[bin]]
name = "mutex"
path = "src/mutex.rs"

[[bin]]
name = "rwlock"
path = "src/rwlock.rs"

[features]
nightly = ["parking_lot_rt/nightly"]
deadlock_detection = ["parking_lot_rt/deadlock_detection"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["synchapi"] }
